--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "url": "git://github.com/wendysa/sails-adminlte.git"
   },
   "author": "wendysa",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "sails-hook-autoreload": "^1.0.0"
+  }
 }
