--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.13",
     "sails-disk": "~0.10.9",
+    "sails-hook-autoreload": "^1.0.0",
     "ts-node": "^3.0.4"
   },
   "scripts": {
