--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js",
-    "install-all": "npm install && bower install"
+    "install-all": "npm install && bower install",
+    "adminlte": "./node_modules/http-server/bin/http-server ./assets/vendors/AdminLTE -p 30000"
   },
   "main": "app.js",
   "repository": {
@@ -41,5 +42,7 @@
   },
   "author": "wendysa",
   "license": "",
-  "devDependencies": {}
+  "devDependencies": {
+    "http-server": "^0.10.0"
+  }
 }
